<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="package_name" translatable="false">com.vitbac.speeddiallocker</string>
    <string name="app_name" translatable="false">Speed Dial Locker</string>
    <string name="title_activity_lock_screen">Lock Screen</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_speed_dial_selection">Speed Dial Selection</string>
    <string name="title_activity_contact_selection">Contact Selection</string>
    <string name="contact_selected_instruction">Select a phone number:</string>
    <string name="contact_assigned_dialog_instruction">Select action:</string>

    <string name="phone_type_custom">Custom</string>
    <string name="phone_type_home">Home</string>
    <string name="phone_type_mobile">Mobile</string>
    <string name="phone_type_work">Work</string>
    <string name="phone_type_fax_work">Work fax</string>
    <string name="phone_type_fax_home">Home fax</string>
    <string name="phone_type_pager">Pager</string>
    <string name="phone_type_callback">Callback</string>
    <string name="phone_type_car">Car</string>
    <string name="phone_type_company_main">Company main</string>
    <string name="phone_type_isdn">ISDN</string>
    <string name="phone_type_main">Main</string>
    <string name="phone_type_other_fax">Other fax</string>
    <string name="phone_type_radio">Radio</string>
    <string name="phone_type_telex">Telex</string>
    <string name="phone_type_tty_tdd">TTY/TDD</string>
    <string name="phone_type_work_mobile">Work mobile</string>
    <string name="phone_type_work_pager">Work pager</string>
    <string name="phone_type_assistant">Assistant</string>
    <string name="phone_type_mms">MMS</string>
    <string name="phone_type_other">Other</string>

    <string name="speed_dial_preference_file_key" translatable="false">com.vitaminbacon.lockscreendialer.ASSIGNED_SPEED_DIALS</string>
    <string name="key_number_to_assign" translatable="false">com.vitaminbacon.lockscreendialer.KEY_NUMBER_TO_ASSIGN</string>
    <string name="key_number_store_prefix_phone" translatable="false">com.vitaminbacon.lockscreendialer.KEY_ASSIGNMENT_NUMBER_</string>
    <string name="key_number_store_prefix_name" translatable="false">com.vitaminbacon.lockscreendialer.KEY_ASSIGNMENT_NAME_</string>
    <string name="key_number_store_prefix_thumb" translatable="false">com.vitaminbacon.lockscreendialer.KEY_ASSIGNMENT_THUMB_</string>
    <string name="key_number_store_prefix_type" translatable="false">com.vitaminbacon.lockscreendialer.KEY_ASSIGNMENT_TYPE_</string>
    <string name="is_key_number_already_assigned" translatable="false">com.vitaminbacon.lockscreendialer.IS_KEY_ASSIGNED</string>


    <string name="contact_assigned_instruction">Current assignment:</string>

    <string name="contact_assigned_reassign">Reassign</string>
    <string name="contact_assigned_remove">Remove</string>

    <string name="toast_contact_assigned">assigned to speed dial no. </string>
    <string name="toast_contact_reassign_cancelled">Reassignment cancelled</string>
    <string name="toast_contact_reassign_cleared">Contact cleared from speed dial #</string>
    <string name="toast_lock_screen_enabled">Speed Dial Locker enabled</string>
    <string name="toast_lock_screen_disabled">Speed Dial Locker disabled</string>
    <string name="title_activity_lock_screen_selection">Lock Screen Type Selection</string>
    <string name="toast_background_selection_file_access_error">File access error; no change</string>

    <string name="lock_screen_selection_instruction">Select a lock screen:</string>
    <string name="lock_screen_keypad_pin_name">Enter Keypad PIN</string>
    <string name="lock_screen_keypad_pattern_name">Draw Keypad Pattern</string>
    <string name="title_activity_keypad_pattern_config">Configure Keypad Pattern</string>
    <string name="title_activity_keypad_pin_config">Configure Keypad PIN</string>

    <string name="btn_keypad_pin_config_submit_1">Continue</string>
    <string name="btn_keypad_pin_config_submit_2">Confirm</string>
    <string name="btn_keypad_pin_config_cancel">Cancel</string>
    <string name="keypad_pin_config_instructions_1">Enter a PIN</string>
    <string name="keypad_pin_config_instructions_2">PIN must be at least 4 digits</string>
    <string name="keypad_pin_config_instructions_3">Tap "Continue" when finished</string>
    <string name="keypad_pin_config_instructions_4">Confirm PIN</string>
    <string name="err_keypad_pin_config_too_short">The PIN must be at least 4 numbers.</string>
    <string name="err_keypad_pin_config_not_matching">The passcodes do not match.</string>
    <string name="keypad_pin_config_success">Keypad PIN lock screen enabled.</string>


    <string name="lock_screen_pin_default_display">Enter PIN</string>
    <string name="lock_screen_wrong_pin_entered">Invalid PIN</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_lock_screen_keypad_pin">Lock Screen PIN</string>
    <string name="title_activity_error_page" translatable="false">ErrorPageActivity</string>

    <string name="lock_screen_end_call_button_text">End Call</string>
    <string name="lock_screen_speaker_call_button_text">Speaker</string>

    <string name="title_activity_lock_screen_launcher" translatable="false">Lock Screen Launcher</string>
    <string name="title_activity_background_selection">Current background:</string>
    <string name="button_pics_activity_background_selection">Select picture</string>
    <string name="button_colors_activity_background_selection">Select color</string>
    <string name="key_background_pic" translatable="false">com.vitaminbacon.lockscreendialer.KEY_BACKGROUND</string>
    <string name="key_background_orientation" translatable="false">com.vitaminbacon.lockscreendialer.KEY_BACKGROUND_ORIENTATION</string>
    <string name="key_background_color" translatable="false">com.vitaminbacon.lockscreendialer.KEY_COLOR</string>
    <string name="background_file_key" translatable="false">com.vitaminbacon.lockscreendialder.BACKGROUND_FILE</string>
    <string name="title_activity_color_selection">Select Background Color</string>

    <string name="lock_screen_speed_dial_toggle_off">Speed Dial Off</string>
    <string name="lock_screen_speed_dial_toggle_on">Speed Dial On</string>

    <string name="swipe_screen_instruction">slide up to unlock</string>

    <string name="color_selection_instruction">Select a color:</string>

    <string name="speed_dial_selection_instructions">Tap a key to assign a phone number.</string>

    <string name="speed_dial_selection_details">Shaded keys have been assigned.</string>

    <string name="contact_search_hint">Type a contact name</string>

    <string name="font_selection_instruction">Select a font:</string>

    <string name="call_unknown_callee">Unknown</string>
    <string name="call_unknown_type">phone</string>

    <string name="error_title_roaming">Roaming Error</string>
    <string name="error_description_roaming">Lock screen can\'t initiate call while roaming.</string>
    <string name="error_title_airplane">Airplane Mode</string>
    <string name="error_description_airplane">Can\'t initiate call while in airplane mode.</string>
    <string name="error_title_offhook">Call Error</string>
    <string name="error_description_offhook">Device failed to initiate call.</string>
    <string name="title_activity_app_background">Select App Background</string>
    <string name="error_title_invalid_number">Unassigned Key</string>
    <string name="error_description_invalid_number">Set speed dial numbers in settings.</string>
    <string name="error_title_speed_dial_inactive">Dialer disabled</string>
    <string name="error_description_speed_dial_inactive">Speed dial disabled; change in settings.</string>
    <string name="error_page_text">You have encountered an error.</string>

    <string name="instruction_app_content_flipper">Select a background:</string>
    <string name="button_app_background_random_text">Randomize</string>
    <string name="button_app_background_about_pics">About</string>
    <string name="instruction_app_content_swipe">Swipe to browse</string>
    <string name="dialog_button_about_app_background">OK</string>
    <string name="title_about_app_background">Photo credit</string>
    <string name="message_about_app_background">Macro background photography licensed courtesy of: \n\nGary Boisvert\n\nCopyright to all images reserved by Gary Boisvert.</string>


</resources>
